# pallet-trusstless-file-server

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
rpc/: Cargo.toml
rpc/runtime-api/: Cargo.toml
rpc/runtime-api/src/: lib.rs
rpc/src/: lib.rs
src/: benchmarking.rs  file_merkle_tree.rs  ipfs.rs  lib.rs  mock.rs  tests.rs  weights.rs
