[package]
name = "pallet-trustless-file-server-rpc"
version = "0.0.1"
edition = "2021"
authors = ["José Molina <jose.molina@parity.io>"]
description = 'RPC methods for the trustless file server pallet'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = { version = "6.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }

pallet-trustless-file-server-runtime-api = { path = "./runtime-api", default-features = false }
serde = { version = "1.0.136", default-features = false, features = ["alloc", "derive"]}
serde_json = { version = "1.0.85", default-features = false }

# Substrate packages
sp-api = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-blockchain = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-runtime = { default-features = false, version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

[features]
default = ["std"]
std = [
    "sp-api/std",
    "sp-runtime/std",
    "pallet-trustless-file-server-runtime-api/std"
]
